compiler/tools/fpp-check/test/command/duplicate_name_param_save.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/command/duplicate_name_param_save.fpp:5.3
  async command P_PARAM_SAVE
  ^
error: duplicate command name P_PARAM_SAVE
previous occurrence is here:
[ local path prefix ]/compiler/tools/fpp-check/test/command/duplicate_name_param_save.fpp:3.3
  param P: U32
  ^
